# MatGraf

./: CMakeLists.txt
Lib/: CMakeLists.txt
Lib/include/Calc/: Vector.h  wektor.h
Lib/src/Calc/: Vector.cpp  wektor.cpp
Main/: CMakeLists.txt  main.cpp
